added real urls

--- a/sets.html
+++ b/sets.html
@@ -120,7 +120,7 @@
 		var createSetLink = function(set) {
 			var link = document.createElement('a')
 			link.className = 'material-icons'
-			link.href = 'http://acrylicosvallejo.com'
+			link.href = set.url + '#products'
 			link.textContent = 'open_in_new'
 			link.target = '_blank'
 			return link
