--- a/proximity.html
+++ b/proximity.html
@@ -22,6 +22,7 @@
 	<script src="./js/color.js"></script>
 	<script src="./js/product.js"></script>
 	<script src="./js/color-matcher.js"></script>
+	<script src="./js/color-set.js"></script>
 	<script src="./setsData.js"></script>
 
 	<table>
@@ -77,7 +78,7 @@
 
 		let findSetMatches = function() {
 
-			let setColors = selectedSet().products.map(p => p.color)\
+			let setColors = selectedSet().products.map(p => p.color)
 			let matches = new ColorMatcher(setColors).match(colorToMatch())
 
 			// clearMatchTableRows()
@@ -89,7 +90,7 @@
 
 		}
 
-		let matchesTableBody = document.querySelector(.matches)
+		let matchesTableBody = document.querySelector('.matches')
 
 		let selectedSet = () => findSetNamed(selectedSetName())
 		let findSetNamed = function(name) {
