--- a/neo4j/population/product-hierarchy.html
+++ b/neo4j/population/product-hierarchy.html
@@ -4,7 +4,8 @@
 	<title>Product Hierarchy Population</title>
 
 	<script src="../../js/product.js"></script>
-	<script src="./generate-product-hierarchy-queries.js"></script>
+	<script src="./js/generate-product-hierarchy-queries.js"></script>
+	<script src="./js/query-utils.js"></script>
 </head>
 <body>
 	<h1>Product Hierarchy<h1>
